--- a/precastr/controller/communication/cells/RightCommunicationTableViewCell.xib
+++ b/precastr/controller/communication/cells/RightCommunicationTableViewCell.xib
@@ -48,7 +48,7 @@
                     </pageControl>
                     <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zI1-Op-Wip">
                         <rect key="frame" x="64" y="130" width="390" height="200"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                         <connections>
                             <outlet property="delegate" destination="KGk-i7-Jjw" id="vGz-Q9-4YR"/>
                         </connections>
