--- a/precastr/controller/guest/cells/SignupScreenTableViewCell.xib
+++ b/precastr/controller/guest/cells/SignupScreenTableViewCell.xib
@@ -94,7 +94,7 @@
                                             <action selector="agreeCheckboxBtnClicked:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="is7-hM-P9Q"/>
                                         </connections>
                                     </button>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CaU-Yn-FqP">
+                                    <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CaU-Yn-FqP">
                                         <rect key="frame" x="30" y="0.0" width="270" height="17"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <attributedString key="attributedText">
@@ -221,6 +221,7 @@
             <color key="backgroundColor" red="0.047058823529411764" green="0.43529411764705883" blue="0.9137254901960784" alpha="1" colorSpace="calibratedRGB"/>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="TermsLinkLabel" destination="CaU-Yn-FqP" id="IDi-ta-LbL"/>
                 <outlet property="agreecheckBoxBtn" destination="BrL-tV-yWv" id="Amw-l0-IgN"/>
                 <outlet property="cameraImage" destination="9KM-sY-xGb" id="WXZ-D5-hkR"/>
                 <outlet property="cameraUIView" destination="VK9-a9-4eb" id="3SU-05-faf"/>
